--- a/app/src/main/res/drawable/input_cursor.xml
+++ b/app/src/main/res/drawable/input_cursor.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorBlack" />
-    <size android:width="1dp" />
-    <padding android:bottom="-2dp" android:top="-3sp" />
+    <solid android:color="#FF5C72" />
+    <size android:width="2dp" />
+    <padding android:bottom="-1dp" android:top="-3sp" />
 </shape>
