1.主页一天都没选择的判断 2.现在可以播放音频文件了

--- a/app/src/main/res/layout/activity_learn_page.xml
+++ b/app/src/main/res/layout/activity_learn_page.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorLeanPageBackGround"
     android:orientation="vertical"
+    android:paddingTop="5dp"
     tools:context=".LearnPage">
 
     <TableLayout
