--- a/app/src/main/res/layout/activity_learn_page_chinese_input.xml
+++ b/app/src/main/res/layout/activity_learn_page_chinese_input.xml
@@ -2,45 +2,55 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
     android:clipChildren="false"
     android:paddingTop="5dp">
 
     <TableRow
         android:clipChildren="false"
-        android:clipToPadding="false"
-        >
+        android:clipToPadding="false">
 
-        <TextView
-            android:id="@+id/partOfSpeechTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="词性"
-            android:minEms="2"
-            android:textColor="@color/colorBlack"
-            android:textSize="20sp" />
+        <RelativeLayout>
 
-        <EditText
-            android:id="@+id/chineseInputText"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/chinese_input_fillet"
-            android:hint="在这里输入中文"
-            android:singleLine="true"
-            android:textColor="@color/colorBlack"
-            android:textCursorDrawable="@drawable/input_cursor"
-            android:textSize="28sp" />
+            <TextView
+                android:id="@+id/partOfSpeechTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:gravity="center_horizontal"
+                android:minEms="2"
+                android:text="词性"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/chineseAnswerTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/chinese_answer_background"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="答答答答答答答答"
-            android:textColor="@color/colorBlack"
-            android:textSize="20sp" />
+            <EditText
+                android:id="@+id/chineseInputText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/partOfSpeechTextView"
+                android:background="@drawable/chinese_input_fillet"
+                android:hint="在这里输入中文"
+                android:isScrollContainer="true"
+                android:minWidth="250dp"
+                android:singleLine="true"
+                android:textColor="@color/colorBlack"
+                android:textCursorDrawable="@drawable/input_cursor"
+                android:textSize="28sp" />
+
+            <TextView
+                android:id="@+id/chineseAnswerTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@id/chineseInputText"
+                android:background="@drawable/chinese_answer_background"
+                android:gravity="left|center_vertical"
+                android:singleLine="true"
+                android:text="答答答答答答答答"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
+        </RelativeLayout>
     </TableRow>
 
 </TableLayout>
