--- a/app/src/main/res/layout/start_table_layout.xml
+++ b/app/src/main/res/layout/start_table_layout.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:stretchColumns="0,1">
 
+    <Button
+        android:id="@+id/basic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Core" />
+
     <TableRow>
 
         <Button
