解决RecyclerView数据错乱问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/homeJsonListView"
+    <com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView
+        android:id="@+id/homeJsonRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null">
+        android:clipChildren="false">
 
-    </ListView>
+    </com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView>
+
 </LinearLayout>
