完善音乐播放功能

--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -6,67 +6,43 @@
     android:orientation="vertical"
     tools:context=".MusicActivity">
 
-    <TextView
-        android:id="@+id/musicText"
+    <LinearLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"
-        android:text=""
-        android:textColor="@color/colorBlack"
-        android:textSize="20sp" />
+        android:background="@color/colorLeanPageBackGround"
+        android:orientation="horizontal"
+        android:paddingBottom="-5dp">
 
-    <TextView
-        android:id="@+id/musicBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="0:00/0:00"
-        android:textColor="@color/colorBlack" />
+        <Button
+            android:id="@+id/back"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@drawable/back_fillet"
+            android:gravity="left|center"
+            android:minHeight="35dp"
+            android:text="〈"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="0,1,2">
-        <TableRow>
-
-            <Button
-                android:id="@+id/randomMusicPlay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="随机选一首" />
-
-            <Button
-                android:id="@+id/randomMusicSuspend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/check_flag_word_fillet"
-                android:text="暂停" />
-
-            <Button
-                android:id="@+id/randomMusicStop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="停止" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="不重复概率"
-                android:textSize="15sp"
-                android:singleLine="true" />
-        </TableRow>
-    </TableLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="#90909090" />
+        <TextView
+            android:id="@+id/musicText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="left|center_vertical"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text=""
+            android:textColor="@color/colorBlack"
+            android:textSize="25sp" />
+    </LinearLayout>
 
     <TableLayout
         android:layout_width="match_parent"
@@ -77,17 +53,94 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:text="搜索:"
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp" />
 
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:singleLine="true"
                 android:text="233" />
         </TableRow>
     </TableLayout>
+    <LinearLayout
+        android:id="@+id/musicFoot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="0,1,2">
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/randomMusicPlay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="随机选一首" />
+
+                <Button
+                    android:id="@+id/randomMusicSuspend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/check_flag_word_fillet"
+                    android:text="暂停" />
+
+                <Button
+                    android:id="@+id/randomMusicStop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="停止" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="不重复概率"
+                    android:singleLine="true"
+                    android:textSize="15sp" />
+            </TableRow>
+        </TableLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="#90909090" />
+
+        <TextView
+            android:id="@+id/musicBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="0:00/0:00"
+            android:textColor="@color/colorBlack" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/musicRelativeLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp">
+
+        <com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView
+            android:id="@+id/musicRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false">
+
+        </com.cnsukidayo.englishtoolandroid.myview.WrapRecyclerView>
+
+    </RelativeLayout>
+
 
 </LinearLayout>
