--- a/app/src/main/res/layout/start_table_layout.xml
+++ b/app/src/main/res/layout/start_table_layout.xml
@@ -2,14 +2,29 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:stretchColumns="0,1"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:stretchColumns="0,1">
 
-    <Button
-        android:id="@+id/basic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Core" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/basic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Core" />
+
+        <Button
+            android:id="@+id/searchWord"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="搜索单词"
+            android:textColor="@color/colorChooseJsonButtonRed"/>
+    </LinearLayout>
+
+
 
     <TableRow>
 
